Gmaps funcionando, falta validar los datos

--- a/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_ImplementacionHistoriaDeUsuario/DeliverEat/css/styles.css
+++ b/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_ImplementacionHistoriaDeUsuario/DeliverEat/css/styles.css
@@ -4,6 +4,10 @@
     font-weight: bold;
     font-size: 150%;
 }
+#map{
+    width: 400px;
+    height: 400px;
+}
 
 .category_block li:hover {
     background-color: #007bff;
